# prompt-playground

./: BUILD_PLAN.md  README.md  conftest.py  databricks.yml  pyproject.toml
scripts/: seed_hinge_prompts.py
src/: app.py  app.yaml  requirements.txt
src/frontend/src/: App.tsx  types.ts
src/frontend/src/components/: DiffView.tsx  EvaluatePanel.tsx  Header.tsx  HowToTab.tsx  LoadingSpinner.tsx  ModelSelector.tsx  PromptDiffView.tsx  PromptSelector.tsx  SearchableSelect.tsx  SettingsModal.tsx  TabBar.tsx
src/frontend/src/components/eval/: EvalHistoryModal.tsx  EvalRunHistory.tsx
src/frontend/src/hooks/: useApi.ts  useEvalApi.ts  useModelApi.ts  usePromptApi.ts
src/frontend/src/utils/: configUtils.ts  diffUtils.ts  experimentUtils.ts  fetchCache.ts
src/server/: cache.py  datasets.py  eval_jobs.py  evaluation.py  llm.py  mlflow_client.py  mlflow_helpers.py  settings.py
src/server/routes/: config.py  evaluate.py  prompts.py  run.py  setup.py
tests/: test_capturing_scorer.py  test_config_route.py  test_eval_abort.py  test_eval_history_routes.py  test_eval_preflight.py  test_experiment_filtering.py  test_llm_error_handling.py  test_prompt_experiment_registration.py  test_prompt_routes.py  test_run_route_system_user.py  test_settings.py  test_setup_routes.py  test_system_user_splitting.py  test_template_rendering.py
