[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
installer = "uv"

[project]
name = "prompt_playground"
version = "0.1.0"
description = "Prompt Playground — MLflow Prompt Registry UI for browsing, running, and evaluating prompts"
readme = "README.md"
dynamic = ["dependencies"]

# DBR 15 (Python 3.11) is the minimum recommended runtime for mlflow[databricks]>=3.1.0
[tool.hatch.envs.dbr15]
template = "dbr15"
extra-dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mlflow[databricks]>=3.1.0",
    "databricks-sdk>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",   # used by FastAPI TestClient in tests
]
features = []

[tool.hatch.envs.dbr16]
template = "dbr16"
extra-dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mlflow[databricks]>=3.1.0",
    "databricks-sdk>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]
features = []

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
